--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,30 @@
         </div>
     </nav>
 
+    <!-- Showcase-->
+
+    <section class="py-5" id="showcase">
+        <div class="primary-overlay text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 text-center">
+                        <h1 class="display-2 mt-5 pt-5">
+                            Do What you Dream of....
+                        </h1>
+                        <p class="lead">Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Optio, vel.</p>
+                        <a href="#" class="btn btn-outline-secondary btn-lg text-white">
+                            <i class="fa fa-arrow-right"></i>Read More</a>
+                    </div>
+                    <div class="col-lg-6 ">
+                        <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
