--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,98 @@
         </div>
     </section>
 
+    <!-- About/ Why Section -->
+
+    <section id="about" class="py-5 text-center bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Why this book?
+                        </h1>
+                        <p class="lead pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Autem beatae excepturi fugit iste officiis, voluptates.
+                        </p>
+                    </div>
+
+                    <!-- About -->
+                    <div id="accordion" role="tablist">
+                        <div class="card">
+                            <div class="card-header" id="heading1">
+                                <h5 class="mb-0">
+                                    <div href="#collapse1" data-toggle="collapse"
+                                    data-parent="#accordion">
+                                        <i class="fa fa-arrow-circle-down"></i> Get Inspired
+                                    </div>
+                                </h5>
+                            </div>
+
+                            <div id="collapse1" class="collapse show">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis doloribus ea
+                                    harum maxime officia praesentium qui repudiandae totam? Beatae earum esse eum illo
+                                    inventore molestias pariatur perspiciatis! Corporis dolore ipsum molestiae quod
+                                    voluptas? Atque dicta non obcaecati, quaerat quia totam?Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit. Dignissimos doloremque error, iste iusto molestiae
+                                    nulla optio porro quos soluta suscipit.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="heading2">
+                                <h5 class="mb-0">
+                                    <div href="#collapse2" data-toggle="collapse"
+                                         data-parent="#accordion">
+                                        <i class="fa fa-arrow-circle-down"></i> Gain Knowledge
+                                    </div>
+                                </h5>
+                            </div>
+
+                            <div id="collapse2" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis doloribus ea
+                                    harum maxime officia praesentium qui repudiandae totam? Beatae earum esse eum illo
+                                    inventore molestias pariatur perspiciatis! Corporis dolore ipsum molestiae quod
+                                    voluptas? Atque dicta non obcaecati, quaerat quia totam?Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit. Dignissimos doloremque error, iste iusto molestiae
+                                    nulla optio porro quos soluta suscipit.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="heading3">
+                                <h5 class="mb-0">
+                                    <div href="#collapse3" data-toggle="collapse"
+                                         data-parent="#accordion">
+                                        <i class="fa fa-arrow-circle-down"></i> Open your Mind
+                                    </div>
+                                </h5>
+                            </div>
+
+                            <div id="collapse3" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis doloribus ea
+                                    harum maxime officia praesentium qui repudiandae totam? Beatae earum esse eum illo
+                                    inventore molestias pariatur perspiciatis! Corporis dolore ipsum molestiae quod
+                                    voluptas? Atque dicta non obcaecati, quaerat quia totam?Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit. Dignissimos doloremque error, iste iusto molestiae
+                                    nulla optio porro quos soluta suscipit.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
