--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 text-center">
-                        <h1 class="display-2 mt-5 pt-5">
+                        <h1 class="display-2 mt-5 pt-5 mainText">
                             Do What you Dream of....
                         </h1>
                         <p class="lead">Lorem ipsum dolor sit amet,
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="card text-center border-primary">
+                    <div class="card text-center border-primary boxCard">
                       <div class="card-body">
                           <h3 class="text-primary">Be Better</h3>
                           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center bg-primary text-white">
+                    <div class="card text-center bg-primary text-white boxCard">
                         <div class="card-body">
                             <h3 class="text-white">Be Smarter</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center border-primary">
+                    <div class="card text-center border-primary boxCard">
                         <div class="card-body">
                             <h3 class="text-primary">Be Faster</h3>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center bg-primary text-white">
+                    <div class="card text-center bg-primary text-white boxCard">
                         <div class="card-body">
                             <h3 class="text-white">Be Stronger</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -231,7 +231,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-sm-5">
-                    <div class="card">
+                    <div class="card authorCard">
                         <div class="card-body">
                             <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                             <h3>Susan Williams</h3>
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-sm-5">
-                    <div class="card">
+                    <div class="card authorCard">
                         <div class="card-body">
                             <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                             <h3>Grace Smith</h3>
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-sm-5">
-                    <div class="card">
+                    <div class="card authorCard">
                         <div class="card-body">
                             <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                             <h3>John Doe</h3>
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-sm-5">
-                    <div class="card">
+                    <div class="card authorCard">
                         <div class="card-body">
                             <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                             <h3>Kevin Swanson</h3>
@@ -321,6 +321,55 @@
             </div>
         </div>
     </section>
+
+    <!-- Contact -->
+
+    <section id="contact" class="bg-light py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9">
+                    <h3>Get in Touch</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, nulla.</p>
+                    <form >
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                <input type="text" class="form-control" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                <input type="email" class="form-control" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
+                                <textarea class="form-control" placeholder="Message"
+                                rows="5"></textarea>
+                            </div>
+                        </div>
+                        <input type="submit" class="btn btn-primary btn-lg btn-block" value="submit">
+                    </form>
+                </div>
+                <div class="col-lg-3 align-self-center d-none d-lg-block">
+                    <img src="img/mlogo.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer id="main-footer" class="py-sm-5 py-lg-4 bg-primary text-white">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 ml-auto">
+                    <p class="lead m-0">Copyright &copy; 2017</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="js/jquery.min.js"></script>
