--- a/src/index.html
+++ b/src/index.html
@@ -361,7 +361,7 @@
     </section>
 
     <!-- footer -->
-    <footer id="main-footer" class="py-sm-5 py-lg-4 bg-primary text-white">
+    <footer id="main-footer" class="py-5 bg-primary text-white">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 ml-auto">
